--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,8 @@
 {{page-title "Tds"}}
-{{outlet}}
+
+{{!-- The following component displays Ember's default welcome message. --}}
+{{!-- Feel free to remove this! --}}
+<div class="ui container">
+  <div class="ui header"><h1>Store</h1></div>
+  {{outlet}}
+</div>
