commit 16h40 moitié du B de réalisé (adieu les points)

--- a/app/templates/order.hbs
+++ b/app/templates/order.hbs
@@ -7,9 +7,40 @@
 <br><br>
 <span class="ui label"> {{@model.dateCreation}} </span>
 
-
-
-
+<table class="ui celled table">
+  <thead>
+  <tr><th>Produit</th>
+    <th>Quantité</th>
+    <th>Prix</th>
+    <th>Montant</th>
+    <th>Preparation</th>
+  </tr></thead>
+  <tbody>
+  <tr>
+    <td data-label="Produit">James</td>
+    <td data-label="Quantité">24</td>
+    <td data-label="Job">Engineer</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td data-label="Produit">Jill</td>
+    <td data-label="Age">26</td>
+    <td data-label="Job">Engineer</td>
+    <td></td>
+    <td></td>
+  </tr>
+  </tbody>
+  <tfoot>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  </tfoot>
+</table>
 
 
 
