--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,13 +1,14 @@
 {{page-title "Index"}}
-<hr style="color:#4BE023; height: 4px">
+<div class="ui green segment">
 
-<h2>Connexion</h2>
+  <h2>Connexion</h2>
 
-<form {{action "login" @model on="submit"}}>
-  <div class="ui form">
-    <div class="required field"> <i class="user icon"></i><Input type="email" @value={{@model.email}} placeholder="Votre email" /></div><br>
-    <div class="required field"><i class="lock icon"></i><Input type="password" @value={{@model.password}} placeholder="Votre mot de passe" /></div><br>
-    <button class="ui black button" type="submit">Se connecter</button>
-  </div>
-</form>
+  <form {{action "login" @model on="submit"}}>
+    <div class="ui form">
+      <div class="required field"> <i class="user icon"></i><Input type="email" required @value={{@model.email}} placeholder="Votre email" /></div><br>
+      <div class="required field"><i class="lock icon"></i><Input type="password" required @value={{@model.password}} placeholder="Votre mot de passe" /></div><br>
+      <button class="ui black button" type="submit">Se connecter</button>
+    </div>
+  </form>
+</div>
 {{outlet}}
